Complete Item crud docs generate
